--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,7 +17,11 @@ spec:
           image: farnsworth1988/kub-data-demo:1
           env:
             - name: STORY_FOLDER
-              value: 'story'
+              # value: 'story'
+              valueFrom:
+                configMapKeyRef:
+                  name: data-store-env
+                  key: folder
           volumeMounts:
             - mountPath: /app/story
               name: story-volume
