--- a/kubernetes/users-deployment.yaml
+++ b/kubernetes/users-deployment.yaml
@@ -17,6 +17,4 @@ spec:
           image: farnsworth1988/kub-demo-users:latest
           env:
             - name: AUTH_ADDRESS
-              value: localhost
-        - name: auth
-          image: farnsworth1988/kub-demo-auth:latest
+              value: "10.96.196.129"
