--- a/kubernetes/task-deployment.yaml
+++ b/kubernetes/task-deployment.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: task-deployment
+  name: tasks-deployment
 spec:
   replicas: 1
   selector: 
     matchLabels:
-      app: task
+      app: tasks
   template:
     metadata:
       labels:
-        app: task
+        app: tasks
     spec:
       containers:
-        - name: task
+        - name: tasks
           image: farnsworth1988/kub-demo-task:latest
           env:
             - name: AUTH_ADDRESS
               # value: "10.96.196.129"
               value: "auth-service.default"
-            - name: TASK_FOLDER
+            - name: TASKS_FOLDER
               value: tasks
